<resources>
    <string name="app_name">OdakApp</string>
    <string name="first_title">Welcome to ODAK!</string>
    <string name="first_onboarding">ODAK will help you to focus and organize your plan and boost your spirit to study</string>
    <string name="second_title">Focus on your work</string>
    <string name="second_onboarding">ODAK will block all of your phone notifications, you can’t also leave the app so you can focus on your work</string>
    <string name="third_title">Talk with our mentor</string>
    <string name="third_onboarding">Our mentor will help you to solve your problems for free</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="text_login">Log in with your account</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="ask_login">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="text_register">Make your own account</string>
    <string name="ask_register">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi, </string>
    <string name="name">Name</string>
    <string name="text_last_log">"Your last log in: "</string>
    <string name="last_log">Last Log</string>
    <string name="weekly_statistics">Weekly Statistics</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="global_rank">Global Rank</string>
    <string name="ask_mentor">Ask Mentor</string>
    <string name="type_a_message">Type a message</string>
    <string name="taylor_lashae">Taylor LaShae</string>
    <string name="txt_grade_12_science">Grade 12 Science</string>
    <string name="search_for_people">Search for people</string>
    <string name="chat">Chat</string>
    <string name="_09_20">09:20</string>
    <string name="chat_taylor">Hi, kamu sudah mengerjak...</string>
    <string name="_1">1</string>
    <string name="lucas_parker">Lucas Parker</string>
    <string name="chat_lucas">Gimana caranya???</string>
    <string name="_09_15">09:15</string>
    <string name="biology_group">Kelas Biologi (20)</string>
    <string name="chat_biology">Vina: Ada yang punya rang...</string>
    <string name="_08_50">08:50</string>
    <string name="_20">20</string>
    <string name="vina_gracia">Vina Gracia</string>
    <string name="chat_vina">Kamu punya catetan kem...</string>
    <string name="_08_48">08:48</string>
    <string name="univ_group">Calon UI 23’ (100)</string>
    <string name="chat_univ">Budi: Ini siapa yang bisa n...</string>
    <string name="_08_40">08:40</string>
    <string name="_42">42</string>
    <string name="donald_mcdonald">Donald McDonald</string>
    <string name="_08_15">08:15</string>
    <string name="chat_donald">Kamu ngerti kan?</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_zara_hemsworth">Zara Hemsworth</string>
    <string name="txt_friends">Friends :</string>
    <string name="txt_view_all">View All</string>
    <string name="txt_02_30_21">02:30:21</string>
    <string name="txt_average_study_time">Average Study Time</string>
    <string name="txt_highest_score">Highest Score</string>
    <string name="txt__08_20_01">08:20:01</string>
    <string name="txt_38_15_00">38:15:00</string>
    <string name="txt_total_study_time">Total Study Time</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_ask_mentor">Ask Mentor</string>
    <string name="txt_search_hint">Search for people or subject</string>
    <string name="txt_claire_clark">Claire Clark</string>
    <string name="txt_biology">Biology</string>
    <string name="txtjordan_wilson">Jordan Wilson</string>
    <string name="txt_history">History</string>
    <string name="txt_abigail_smith">Abigail Smith</string>
    <string name="txt_economy">Economy</string>
    <string name="txt_physic">Physic</string>
    <string name="txt_geography">Geography</string>
    <string name="txt_kennath_abraham">Kennath Abraham</string>
    <string name="txt_rachel_lee">Rachel Lee</string>
    <string name="txt_math">Math</string>
    <string name="txt_focus_timer">Focus Timer</string>
    <string name="txt_biology_class">Biology Class</string>
    <string name="text_timer">Timer</string>
    <string name="total_duration">Total Duration</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="time_vina">11:24:14</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="time_lucas">10:14:34</string>
    <string name="you">YOU</string>
    <string name="time_zara">08:20:01</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="text_duration">30 Minutes</string>
    <string name="time_daniel">07:40:22</string>
    <string name="daniel_martin">Daniel Martin</string>
    <string name="_4">#4</string>
    <string name="_5">#5</string>
    <string name="time_carter">05:30:36</string>
    <string name="carter_collins">Carter Collins</string>
    <string name="_6">#6</string>
    <string name="emma_carter">Emma Carter</string>
    <string name="_7">#7</string>
    <string name="time_taylor">04:00:00</string>
    <string name="_8">#8</string>
    <string name="time_zoey">03:30:00</string>
    <string name="txt_07_15am_07_45am">07:15am - 07:45am</string>
    <string name="_00_15_00_2">-00:15:00</string>
    <string name="don_t_give_up">Don’t give up!</string>
    <string name="_00_15_00">00:15:00</string>
    <string name="timer">Timer</string>
    <string name="home">Home</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>
    <string name="task_planner">Task Planner</string>
    <string name="text_date">Thursday, 01 October 2020</string>
    <string name="add_task_for">Add Task For</string>
    <string name="_07_20_am_07_45_am">07:20 am - 07:45 am</string>
    <string name="_10_00_am_11_30_am">10:00 am - 11:30 am</string>
    <string name="txt_math_exam">Math Exam</string>
    <string name="txt_physic_class">Physic Class</string>
    <string name="_02_30_pm_03_00_pm">02:30 pm - 03:00 pm</string>
    <string name="add_new_task">Add New Task</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_imagebutton">ImageButton</string>
    <string name="zoey_brooks">Zoey Brooks</string>
    <string name="txt_imagebutton">ImageButton</string>
    <string name="txt_floatingactionbutton">FloatingActionButton</string>
</resources>