<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in"
    android:orientation="vertical"
    tools:context=".auth.register.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_80dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_register"
        android:textSize="@dimen/_14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/full_name"
        android:textSize="@dimen/_16sp" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="@dimen/_12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textSize="@dimen/_16sp" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create_password"
        android:textSize="@dimen/_16sp" />

    <EditText
        android:id="@+id/et_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/confirm_password"
        android:textSize="@dimen/_16sp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_12dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_40dp"
        android:background="@drawable/button_radius"
        android:padding="@dimen/_10dp"
        android:text="@string/create_account"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ask_register"
        android:textSize="@dimen/_15sp" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_16sp" />

</LinearLayout>