<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer.TimerFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_imageview"
        android:scaleType="fitCenter"
        android:src="@drawable/green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/txt_focus_timer"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_biology_class"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_07_15am_07_45am"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/total_duration"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_duration"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_25dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/let_s_start"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_20sp" />

        <ImageButton
            android:id="@+id/btn_timer"
            android:layout_width="@dimen/_55dp"
            android:layout_height="@dimen/_55dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_round"
            android:backgroundTint="@color/main_color"
            android:contentDescription="@string/txt_imageview"
            android:src="@drawable/ic_play" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/timer_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/main_color"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>